// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`compressionOptions\` option matches snapshot for custom options ({Object}): assets 1`] = `
Array [
  Array [
    "0.async.c587a252db9084a74145.js",
    156,
  ],
  Array [
    "0.async.c587a252db9084a74145.js.gz",
    141,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73332,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    404,
  ],
  Array [
    "js.f9610f680ea96abb497c.js",
    10267,
  ],
  Array [
    "js.f9610f680ea96abb497c.js.gz",
    3181,
  ],
]
`;

exports[`when applied with \`compressionOptions\` option matches snapshot for custom options ({Object}): errors 1`] = `Array []`;

exports[`when applied with \`compressionOptions\` option matches snapshot for custom options ({Object}): warnings 1`] = `Array []`;

exports[`when applied with \`compressionOptions\` option matches snapshot without values: assets 1`] = `
Array [
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js",
    130,
  ],
  Array [
    "0.async.dbe59b7ea0e1a63e45d4.js.gz",
    117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png.gz",
    73160,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.b329671af0217355535e.js",
    10267,
  ],
  Array [
    "js.b329671af0217355535e.js.gz",
    2798,
  ],
]
`;

exports[`when applied with \`compressionOptions\` option matches snapshot without values: errors 1`] = `Array []`;

exports[`when applied with \`compressionOptions\` option matches snapshot without values: warnings 1`] = `Array []`;
